Very basic setup of templates, js and css

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -1,1 +1,29 @@
-RD Alpha!
+{% extends "_base.html" %}
+
+{% load static %}
+
+{% block title %}Home | Racial Disparity{% endblock %}
+
+{% block js %}
+    {{ block.super }}
+    <script src="{% static "index.js" %}"></script>
+{% endblock %}
+
+{% block css %}
+    {{ block.super }}
+    <link href="{% static "index.css" %}" rel="stylesheet">
+{% endblock %}
+
+{% block body %}
+    <h1>Home</h1>
+    <p>
+        <a href="{% url 'a' %}">A</a>
+    </p>
+    <p>
+        <a href="{% url 'b' %}">B</a>
+    </p>
+    <p>
+        <a href="{% url 'c' %}">C</a>
+    </p>
+    {{ block.super }}
+{% endblock %}
