Integrated tom white/kanes early prototype from proposal.

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -17,6 +17,9 @@
 {% block body %}
     <h1>Home</h1>
     <p>
+        <a href="{% url 'homepage' %}">Homepage</a>
+    </p>
+    <p>
         <a href="{% url 'a' %}">A</a>
     </p>
     <p>
