Very basic first go at django template structure.

--- a/web/app/templates/_base.html
+++ b/web/app/templates/_base.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>{% block title %}Racial Disparity{% endblock %}</title>
+        <title>{% block title %}Race Disparity{% endblock %}</title>
 
         {% block css %}
             <link href="{% static "app.css" %}" rel="stylesheet">
