set up govuk styling

--- a/web-project/app/views/layouts/application.html.erb
+++ b/web-project/app/views/layouts/application.html.erb
@@ -13,8 +13,6 @@
     <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</span>
   </p>
 </div>
-
-<%= yield %>
-
+<%= render file: 'layouts/govuk_template' %>
 </body>
 </html>
