fix homepage urls

--- a/web-project/app/views/homepage/index.html.erb
+++ b/web-project/app/views/homepage/index.html.erb
@@ -37,11 +37,11 @@
     <div class = "column-one-third">
       <ul class="list list-bullet">
         
-          <li><a href = "/education">Housing and Living Standards</a></li>
+          <li><a href = "/housing%20%26%20living%20standards">Housing and Living Standards</a></li>
           <p> Ownership, renting, social housing, homelessness, living conditions, poverty</p>
           
           
-          <li><a href="/work">Health and social care</a></li>
+          <li><a href="/health%20%26%20social%20care">Health and social care</a></li>
           <p> Physical and mental health, preventing illness, quality of care, access to treatment</p>
           
       </ul>
@@ -50,10 +50,10 @@
     <div class = "column-one-third">
       <ul class="list list-bullet">
         
-          <li><a href = "/education">Security and justice</a></li>
+          <li><a href = "/security%20%26%20justice">Security and justice</a></li>
           <p>Criminal justice system, crimes, police, customs, defence</p>
           
-          <li><a href="/work">Participation, representation and private life</a></li>
+          <li><a href="/<%= URI::escape("participation, representation & private life")%>">Participation, representation and private life</a></li>
           <p> Culture, media, communities, environment, civic action, wellbeing  </p>
 
       </ul>
