more updates for prototype

--- a/web-project/app/views/taxonomy_level/missing.html.erb
+++ b/web-project/app/views/taxonomy_level/missing.html.erb
@@ -1,7 +1,8 @@
 <main id="content" role="main">
-
-  <p class="lede">
-    We currently have insufficient data on this topic
-  </p>
+  <div style="padding-top: 50px">
+    <p class="lede">
+      This data is not yet available. You can find published data related to  "<%=@taxonomy_level.name.titleize %>" on <a href="gov.uk">GOV.UK</a> and <a href="www.ons.org.uk">www.ons.org.uk</a>
+    </p>
+  </div>
 
 </main>
