add search and change graphs to use race instead of ethnicity

--- a/web-project/app/views/homepage/index.html.erb
+++ b/web-project/app/views/homepage/index.html.erb
@@ -5,7 +5,7 @@
   <div class="grid-row">
 
     <div class="heading-xlarge">
-     <h1> Race Disparity Audit </h1>
+     <h1> Race disparity in the public sector </h1>
     </div>
 
     <p class="lede"> 
