--- a/web-project/app/views/layouts/application.html.erb
+++ b/web-project/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebProject</title>
+  <title>Race Disparity</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -12,7 +12,17 @@
 <% end %>
 
 <% content_for :global_header_text do %>
-  Race Disparity Audit
+  Race Disparity
+<% end %>
+
+<% content_for :inside_header do %>
+<form id="search" class="site-search" action="/search" method="get" role="search">
+    <div class="content">
+      <label for="site-search-text">Search</label>
+      <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus">
+      <input class="submit" type="submit" value="Search">
+    </div>
+  </form>
 <% end %>
 
 <body>
