--- a/web-project/app/views/layouts/application.html.erb
+++ b/web-project/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="content">
       <label for="site-search-text">Search</label>
       <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus">
-      <input class="submit" type="submit" value="Search">
+      <input class="button" style="width:80px" value="Search">
     </div>
   </form>
 <% end %>
