--- a/web-project/app/views/taxonomy_level/missing.html.erb
+++ b/web-project/app/views/taxonomy_level/missing.html.erb
@@ -1,7 +1,7 @@
 <main id="content" role="main">
   <div style="padding-top: 50px">
     <p class="lede">
-      This data is not yet available. You can find published data related to  "<%=@taxonomy_level.name.titleize %>" on <a href="gov.uk">GOV.UK</a> and <a href="www.ons.org.uk">www.ons.org.uk</a>
+      This data is not yet available. You can find published data related to  "<%=@taxonomy_level.name.titleize %>" on <a href="http://gov.uk">GOV.UK</a> and <a href="http://www.ons.gov.uk">www.ons.gov.uk</a>
     </p>
   </div>
 
