--- a/web-project/app/views/layouts/application.html.erb
+++ b/web-project/app/views/layouts/application.html.erb
@@ -7,20 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 
-<% content_for :homepage_url do %>
-/
-<% end %>
-
-<% content_for :global_header_text do %>
-  Race Disparity
-<% end %>
-
 <% content_for :inside_header do %>
 <form id="search" class="site-search" action="/search" method="get" role="search">
     <div class="content">
       <label for="site-search-text">Search</label>
       <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus">
-      <input class="button" style="width:80px" value="Search">
+      <span class="button" style="width:80px" value="Search">Search</span>
     </div>
   </form>
 <% end %>
