--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -46,12 +46,17 @@
           </label>
 
           <label class="block-label selection-button-radio" for="radio-3">
-            <input id="radio-3" type="radio" name="radio-group" value="I am a British citizen living abroad">
+            <input id="radio-4" type="radio" name="radio-group" value="Asian">
             Asian
           </label>
 
           <label class="block-label selection-button-radio" for="radio-3">
-            <input id="radio-3" type="radio" name="radio-group" value="Other">
+            <input id="radio-5" type="radio" name="radio-group" value="Mixed">
+            Mixed
+          </label>
+
+          <label class="block-label selection-button-radio" for="radio-3">
+            <input id="radio-6" type="radio" name="radio-group" value="Other">
             Other
           </label>
 
