--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 
-<% content_for :inside_header do %>
-<form id="search" class="site-search" action="/search" method="get" role="search">
-    <div class="content">
-      <label for="site-search-text">Search</label>
-      <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus">
-      <span class="button" style="width:80px" value="Search">Search</span>
-    </div>
-  </form>
+<% content_for :after_header do %>
+
 <% end %>
 
 <body>
-  <div class="phase-banner">
-    <p>
-      <strong class="phase-tag">ALPHA</strong>
-      <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</span>
-    </p>
-  </div>
   <%= render file: 'layouts/govuk_template' %>
 </body>
 </html>
